--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,10 +15,9 @@ a {
 nav {
   display: flex;
   justify-content: space-around;
-  min-height: 8vh;
-  margin-top: 2em;
-  position: absolute;
+  min-height: 5vh;
   width: 100%;
+  padding: 10px 0;
   align-items: center;
 }
 
@@ -32,7 +31,13 @@ nav {
 
 .logo {
   display: flex;
-  height: 90pt;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+}
+
+.logo img {
+  height: 5em;
 }
 
 .logo h4 {
