--- a/src/css/index.css
+++ b/src/css/index.css
@@ -14,7 +14,7 @@
 
 /* Buttons */
 .btn {
-  background-color: #4285f4;
+  background-color: #febc59;
   padding: 0.5em 1em;
   font-size: 16px;
   color: #fff;
