--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -6,7 +6,8 @@
 }
 
 .form_wrapper {
-  margin: 0 auto;
+  margin-top: 8em;
+  margin-left: 35em;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -56,7 +57,7 @@
 .form_wrapper input[type='submit'] {
   border: none;
   width: 50%;
-  background-color: #4285f4;
+  background-color: #febc59;
 }
 /* Animation */
 .animated_content {
