--- a/src/components/OrgAdminNavbar/OrgAdminNavbar.module.css
+++ b/src/components/OrgAdminNavbar/OrgAdminNavbar.module.css
@@ -1,66 +1,42 @@
-.header_block {
-  position: absolute;
-  width: 100%;
-  height: 125px;
-  left: 0px;
-  top: 0px;
-  background: #f7f7f7;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
+.logo {
+  height: 16vh;
+  width: 16vh;
+  margin-left: 2%;
 }
 
-.image {
-  position: absolute;
-  width: 92px;
-  height: 100px;
-  left: 17px;
-  top: 13px;
+.header_block {
+  height: 18vh;
+  width: 100%;
+  background: #f7f7f7;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
+  display: flex;
+  float: left;
 }
 
 .heading {
-  position: absolute;
-  width: 151px;
-  height: 27px;
-  left: 109px;
-  top: 49px;
-  font-style: normal;
+  font-size: 2vh;
+  padding-top: 10vh;
+}
+
+.left_block {
+  width: 20vw;
+  height: 82vh;
+  color: #f7f7f7;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
+  vertical-align: top;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding-left: 2vw;
+  gap: 10%;
+  padding-top: 10vh;
+}
+
+.left_block a {
   font-weight: bold;
-  font-size: 24px;
-  line-height: 27px;
-  color: #000000;
+  font-size: 2vh;
 }
 
-.second_box {
-  position: absolute;
-  width: 270px;
-  height: 82.5%;
-  left: 0px;
-  top: 125px;
-  background: #f4f4f4;
-  display: flex;
-}
-
-.second_box ul li {
-  padding: 15px;
-  margin-top: 10px;
-  margin-left: 20px;
-  text-decoration: none;
+.left_block li {
   list-style-type: none;
-  display: flex;
-  padding-top: 30px;
-}
-
-.text {
-  position: absolute;
-  width: 50px;
-  height: 20px;
-  font-style: normal;
-  font-weight: 10;
-  font-size: 18px;
-  line-height: 20px;
-  margin-left: 10px;
-}
-
-.third_box {
-  margin-top: 28rem;
-  margin-left: -10px;
 }
