--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -1,42 +1,147 @@
-.logo {
-  height: 16vh;
-  width: 16vh;
-  margin-left: 2%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.header_block {
-  height: 18vh;
-  width: 100%;
-  background: #f7f7f7;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
-  display: flex;
+body {
+  font-family: 'Quattrocento Sans', sans-serif;
+}
+
+a {
+  text-decoration: none;
+}
+
+.main {
   float: left;
+  display: block;
 }
 
-.heading {
-  font-size: 2vh;
-  padding-top: 10vh;
-}
-
-.left_block {
-  width: 20vw;
-  height: 82vh;
-  color: #f7f7f7;
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.16);
-  vertical-align: top;
+.navbarbg{
+  height:73px;
+  background-color: #F7F7F7;
   display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  padding-left: 2vw;
-  gap: 10%;
-  padding-top: 10vh;
+  z-index:1;
+  position: relative;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 0px 0px 8px 2px #c8c8c8;  
 }
 
-.left_block a {
-  font-weight: bold;
-  font-size: 2vh;
+.logo {
+  margin-left: 0;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 
-.left_block li {
-  list-style-type: none;
+.logo img {
+  margin-top:5px;
+  margin-left:10px;
+  transform: scale(1.1);
+  height: 64px;
+  width: 70px;
+}
+
+.logo > strong {
+  margin-left:3px;
+  font-family: sans-serif;
+  font-size: 19px;
+}
+
+.logo h4 {
+  margin-left: 7px;
+  letter-spacing: 1px;
+  font-weight: lighter;
+  margin-top: 3em;
+}
+.roundedcircle{
+  margin-top:7px;
+  margin-right:25px;
+  border-radius: 50px;
+}
+
+/* .sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  z-index: 100;
+  padding: 48px 0 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+#sidebar-wrapper{
+  min-height: 100vh !important;
+  width: 100vw;
+  margin-left: -1rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
+}
+
+#sidebar-wrapper .sidebar-heading {
+  padding: 0.875rem 1.25rem;
+  font-size: 1.2rem;
+}
+
+#page-content-wrapper {
+  min-width: 0;
+  width: 100%;
+} */
+
+.sidebar{
+  z-index:0;
+  position: relative;
+  min-width:160px;
+  width:10%;
+  background-color: #F7F7F7;
+  margin:0;
+  min-height: 100vh !important;
+}
+
+.sidebarsticky{
+  padding-top:40%;
+}
+
+.navitem{
+  padding-left:27%;
+  padding-top:12px;
+  padding-bottom:12px;
+  cursor: pointer;
+}
+.navitem:hover{
+  border-left:4px solid black;
+  z-index:1;
+  background-color: #F7F7F7;
+  box-shadow: 2px 2px 8px 2px #c8c8c8;  
+}
+
+.navitem:target {
+  z-index:1;
+  background-color: #F7F7F7;
+  box-shadow: 2px 2px 2px 2px #c8c8c8;  
+}
+
+.naviteminside{
+  font-size:17px;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 768px){
+  .sidebar{
+    width:15%;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .logo {
+    margin-left: 0%;
+  }
 }
