--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -68,7 +68,7 @@ a {
   width: 10%;
   background-color: #f7f7f7;
   margin: 0;
-  min-height: 100vh !important;
+  min-height: calc(100vh - 73px) !important;
 }
 
 .sidebarsticky {
