--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -29,6 +29,7 @@ a {
 }
 
 .logo {
+  color: black;
   margin-left: 0;
   display: flex;
   align-items: center;
@@ -63,12 +64,13 @@ a {
 
 .sidebar{
   z-index:0;
-  position: relative;
+  padding-top:50px;
+  position: fixed;
   min-width:160px;
   width:10%;
   background-color: #F7F7F7;
   margin:0;
-  min-height: 100vh !important;
+  height:100%;
 }
 
 .sidebarsticky{
@@ -97,6 +99,7 @@ a {
 .naviteminside{
   font-size:17px;
   font-weight: 600;
+  color: black;
 }
 
 @media screen and (max-width: 768px){
