--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -62,15 +62,15 @@ a {
   border-radius: 50px;
 }
 
-.sidebar{
-  z-index:0;
-  padding-top:50px;
-  position: fixed;
-  min-width:160px;
-  width:10%;
-  background-color: #F7F7F7;
-  margin:0;
-  height:100%;
+.sidebar {
+    z-index: 0;
+    position: relative;
+    min-width: 160px;
+    width: 10%;
+    background-color: #f7f7f7;
+    margin: 0;
+    min-height: calc(100vh - 73px);
+    max-height: 150vh;
 }
 
 .sidebarsticky {
@@ -83,11 +83,11 @@ a {
   padding-bottom: 12px;
   cursor: pointer;
 }
-.navitem:hover{
-  border-left:4px solid black;
-  z-index:1;
-  background-color: #F7F7F7;
-  box-shadow: 2px 2px 8px 2px #c8c8c8;  
+.navitem:hover {
+  border-left: 4px solid black;
+  z-index: 1;
+  background-color: #f7f7f7;
+  box-shadow: 2px 2px 8px 2px #c8c8c8;
 }
 
 .navitem:target {
