--- a/src/components/OrganizationCard/OrganizationCard.module.css
+++ b/src/components/OrganizationCard/OrganizationCard.module.css
@@ -6,51 +6,49 @@
 }
 
 .first_box {
-    display: flex;
-    flex-direction: row;
-    padding-bottom: 10px;
-    padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 .second_box {
-    padding-left: 20px;
-    padding-top: 10px;
+  padding-left: 20px;
+  padding-top: 10px;
 }
 
 .second_box > h4 {
-    font-size: 10;
-    font-weight: bold;
+  font-size: 10;
+  font-weight: bold;
 }
 
 .second_box > h5 {
-    font-size: 10;
-    font-weight: 100;
-    color: #969696;
+  font-size: 10;
+  font-weight: 100;
+  color: #969696;
 }
 
 .deco {
-    border: 1px solid #DFDFDF;
-    width: 65vw;
-    height: 0px !important;
+  border: 1px solid #dfdfdf;
+  width: 65vw;
+  height: 0px !important;
 }
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
-  
+
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #DFDFDF; 
-    border-radius: 10px;
+  box-shadow: inset 0 0 5px #dfdfdf;
+  border-radius: 10px;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #FFBD59; 
-    border-radius: 10px;
+  background: #ffbd59;
+  border-radius: 10px;
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: #FFBD59; 
+  background: #ffbd59;
 }
-
-
