--- a/src/components/OrganizationCard/OrganizationCard.module.css
+++ b/src/components/OrganizationCard/OrganizationCard.module.css
@@ -5,6 +5,13 @@
   width: 65px;
 }
 
+.box {
+  color: #ffbd59;
+}
+
+.box :hover {
+  color: #ffbd59;
+}
 .first_box {
   display: flex;
   flex-direction: row;
@@ -20,9 +27,12 @@
 .second_box > h4 {
   font-size: 10;
   font-weight: bold;
+  text-decoration: none;
+  color: black;
 }
 
 .second_box > h5 {
+  text-decoration: none;
   font-size: 10;
   font-weight: 100;
   color: #969696;
