--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -89,31 +89,45 @@
   width: 100%;
 }
 
-/* Screen sizes */
-@media screen and (max-width: 1024px) {
-  .form_wrapper {
-    left: 50%;
-  }
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
 }
-@media screen and (max-width: 665px) {
-  .form_wrapper {
-    min-width: 90%;
-  }
+.loader {
+  margin: 60px auto;
+  margin-top: 35vh !important;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #febc59;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
 }
-
-@-webkit-keyframes up-down {
+@-webkit-keyframes load8 {
   0% {
-    transform: translateY(10px);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: translateY(-10px);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
-@keyframes up-down {
+@keyframes load8 {
   0% {
-    transform: translateY(10px);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: translateY(-10px);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
