--- a/src/screens/SuperAdminDashboard/SuperAdminDashboard.module.css
+++ b/src/screens/SuperAdminDashboard/SuperAdminDashboard.module.css
@@ -1,51 +1,145 @@
-.first_box {
-  margin-top: -82vh;
-  margin-left: 20%;
-}
-
-.first_box h2 {
-  font-size: 3vh;
-  padding-bottom: 20px;
-  margin-left: 4vw;
-}
-
-.second_box {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -11vw;
-  padding-bottom: 40px;
-}
-
-.list {
-  background: #ffffff;
-  border: 1px solid #e1e1e1;
-  box-sizing: border-box;
-  border-radius: 10px;
-  margin-top: 10px;
-  height: 25vh;
-  width: 20vw;
-}
-
-.third_box {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -11vw;
-  padding-bottom: 40px;
-}
-
-.third_box h4 {
-  padding-bottom: 20px;
-}
-
-.box {
+.navbarbg {
   height: 60px;
+  background-color: white;
+  display: flex;
+  margin-bottom: 30px;
+  z-index: 1;
+  position: relative;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 0px 0px 8px 2px #c8c8c8;
 }
 
-.right_one {
-  margin-left: 15vw;
+.logo {
+  color: #707070;
+  margin-left: 0;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
 }
 
-.left_one {
-  margin-left: 15vw;
-  padding-bottom: 15px;
+.logo img {
+  margin-top: 0px;
+  margin-left: 10px;
+  height: 64px;
+  width: 70px;
 }
+
+.logo > strong {
+  line-height: 1.5rem;
+  margin-left: -5px;
+  font-family: sans-serif;
+  font-size: 19px;
+  color: #707070;
+}
+.mainpage {
+  display: flex;
+  flex-direction: row;
+}
+.sidebar {
+  z-index: 0;
+  padding-top: 5px;
+  margin: 0;
+  height: 100%;
+}
+.sidebar:after{
+  content: "";
+  background-color: #f7f7f7;
+  position: absolute;
+  width: 2px;
+  height: 600px;
+  top: 10px;
+  left: 94%;
+  display: block;
+}
+.sidebarsticky {
+  padding-left: 45px;
+}
+.sidebarsticky >p {
+  margin-top: -10px;
+}
+
+.navitem {
+  padding-left: 27%;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  cursor: pointer;
+}
+
+.logintitle {
+  color: #707070;
+  font-weight: 600;
+  font-size: 20px;
+  margin-bottom: 30px;
+  padding-bottom: 5px;
+  border-bottom: 3px solid #31bb6b;
+  width: 30%;
+}
+.logintitleadmin {
+  color: #707070;
+  font-weight: 600;
+  font-size: 20px;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  padding-bottom: 5px;
+  border-bottom: 3px solid #31bb6b;
+  width: 60%;
+}
+.admindetails{
+  display: flex;
+  justify-content: space-between;
+}
+.admindetails >p{
+  margin-top:-12px;
+  margin-right: 30px;
+}
+.mainpageright > hr{
+  margin-top:30px;
+  width:100%;
+  margin-left:-15px;
+  margin-bottom:40px;
+}
+.justifysp{
+  display: flex;
+  justify-content: space-between;
+}
+.orglist{
+  margin-top:-10px;
+}
+.orgimg{
+  border-radius: 10px;
+  margin-left:10px;
+
+}
+.singledetails{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.singledetails p{
+  margin-bottom: -5px;
+}
+.singledetails_data_left{
+  margin-top:10px;
+  margin-left:10px;
+  color:#707070
+}
+.singledetails_data_right{
+  justify-content: right;
+  margin-top:10px;
+  margin-right:20px;
+  text-align: right;
+  color:#707070
+}
+.orgname{
+  font-size: 16px;
+  font-weight:bold;
+}
+.orgfont{
+  margin-top:3px;
+}
+.orgfontcreated{
+  margin-top:18px;
+}
+
+
