--- a/src/screens/LoginPage/LoginPage.module.css
+++ b/src/screens/LoginPage/LoginPage.module.css
@@ -14,7 +14,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  border: none;
 }
+
 .form_wrapper {
   margin-top: 27px;
   top: 50%;
@@ -41,21 +43,21 @@
   color: #707070;
   font-weight: 600;
   font-size: 20px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding-bottom: 5px;
   border-bottom: 3px solid #31bb6b;
   width: 50%;
 }
 form > label {
   font-weight: bold;
-  padding-bottom: 10px;
+  padding-bottom: 1px;
   font-size: 14px;
   color: #707070;
 }
 
 form > input {
   display: block;
-  margin-bottom: 25px;
+  margin-bottom: 20px;
   border: 1px solid #e8e5e5;
   box-shadow: 2px 1px #e8e5e5;
   padding: 10px 20px;
@@ -238,15 +240,7 @@ form > br {
 /* .my-modal .modal-content {
   background-color: red;
 } */
-.modal-open #grid_wrapper {
-  filter: blur(5px) grayscale(90%);
-  background-color: red;
-}
 
-.blur {
-  filter: blur(5px) grayscale(90%);
-  background-color: red;
-}
 .cancel > i {
   margin-top: 5px;
   transform: scale(1.2);
