--- a/src/components/AdminNavbar/AdminNavbar.module.css
+++ b/src/components/AdminNavbar/AdminNavbar.module.css
@@ -16,20 +16,24 @@ a {
   float: left;
   display: block;
 }
-
 .navbarbg {
-  height: 73px;
-  background-color: #f7f7f7;
+  height: 60px;
+  background-color: white;
   display: flex;
+  margin-bottom: 30px;
   z-index: 1;
   position: relative;
   flex-direction: row;
-  justify-content: space-between;
   box-shadow: 0px 0px 8px 2px #c8c8c8;
 }
 
+/* .navallitem > div{
+  position: relative;
+  justify-content: space-between;
+} */
+
 .logo {
-  color: black;
+  color: #707070;
   margin-left: 0;
   display: flex;
   align-items: center;
@@ -37,32 +41,71 @@ a {
 }
 
 .logo img {
-  margin-top: 5px;
+  margin-top: 0px;
   margin-left: 10px;
-  transform: scale(1.1);
   height: 64px;
   width: 70px;
 }
 
 .logo > strong {
-  margin-left: 3px;
+  text-decoration: none;
+  line-height: 1.5rem;
+  margin-left: -5px;
   font-family: sans-serif;
   font-size: 19px;
+  color: #707070;
 }
-
-.logo h4 {
-  margin-left: 7px;
-  letter-spacing: 1px;
-  font-weight: lighter;
-  margin-top: 3em;
+.userimage {
+  align-items: right;
+  float: right;
+  text-align: right;
+  justify-content: right;
+  margin-right: 25px;
 }
 .roundedcircle {
-  margin-top: 7px;
+  margin-top: 10px;
   margin-right: 25px;
   border-radius: 50px;
 }
+.navitems {
+  margin-top: 19px;
+  cursor: pointer;
+  margin-left: 80px;
+  line-height: 1.5rem;
+  font-size: 16px;
+}
+.navitems > a {
+  text-decoration: none;
+  color: #707070;
+  margin-right: 40px;
+  padding-bottom: 5px;
+  width: 100%;
+  z-index: 1;
+  transition: smooth;
+}
+.navitems > a:hover {
+  text-decoration: none;
+  border-bottom: 3px solid #31bb6b;
+  font-weight: 600;
+}
 
-.sidebar {
+.navitems:active {
+  padding-bottom: 5px;
+  border-bottom: 3px solid #31bb6b;
+}
+
+@media screen and (max-width: 1024px) {
+  .logo > strong {
+    display: none;
+  }
+  .navitems {
+    margin-left: 20px;
+  }
+  .navitems > a {
+    margin-right: 20px;
+  }
+}
+/* .sidebar {
   z-index: 0;
   padding-top: 50px;
   position: fixed;
@@ -116,4 +159,4 @@ a {
   .logo {
     margin-left: 0%;
   }
-}
+} */
